--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,6 @@
-Bottleneck @ file:///opt/conda/conda-bld/bottleneck_1657175564434/work
-brotlipy==0.7.0
-certifi @ file:///opt/conda/conda-bld/certifi_1663615672595/work/certifi
-cffi @ file:///tmp/abs_98z5h56wf8/croots/recipe/cffi_1659598650955/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-cryptography @ file:///tmp/build/80754af9/cryptography_1652101588599/work
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-mkl-fft==1.3.1
-mkl-random @ file:///home/builder/ci_310/mkl_random_1641843545607/work
-mkl-service==2.4.0
-numexpr @ file:///opt/conda/conda-bld/numexpr_1656940300424/work
-numpy @ file:///opt/conda/conda-bld/numpy_and_numpy_base_1653915516269/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
+numpy==1.21.5
 pandas==1.4.4
-Pillow==9.2.0
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work
-PySocks @ file:///home/builder/ci_310/pysocks_1640793678128/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///opt/conda/conda-bld/pytz_1654762638606/work
-requests @ file:///opt/conda/conda-bld/requests_1657734628632/work
-scikit-learn @ file:///tmp/abs_d76175bc-917a-47d4-9994-b56265948a6328vmoe2o/croots/recipe/scikit-learn_1658419412415/work
-scipy @ file:///opt/conda/conda-bld/scipy_1661390393401/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
+scikit-learn==1.1.1
 torch==1.12.1
-torchaudio==0.12.1
 torchvision==0.13.1
-tqdm @ file:///opt/conda/conda-bld/tqdm_1664392687731/work
-typing_extensions @ file:///tmp/abs_ben9emwtky/croots/recipe/typing_extensions_1659638822008/work
-urllib3 @ file:///tmp/abs_5dhwnz6atv/croots/recipe/urllib3_1659110457909/work
+tqdm==4.64.1
